--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "deprecated-react-native-prop-types": "^4.1.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-camera": "^4.2.1",
