--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-camera": "^4.2.1",
+    "react-native-flash-message": "^0.4.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-masked-text": "^1.13.0",
+    "react-native-modal": "^13.0.1",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.1",
