--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@flyerhq/react-native-chat-ui": "^1.4.3",
     "@notifee/react-native": "^7.8.0",
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-community/cli": "^11.2.0",
@@ -33,7 +34,7 @@
     "react-native-pager-view": "^6.2.0",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^3.1.0",
-    "react-native-safe-area-context": "^4.5.1",
+    "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
     "react-native-tab-view": "^3.5.2",
