--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-flash-message": "^0.4.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-pager-view": "^6.2.0",
     "react-native-qrcode-svg": "^6.2.0",
@@ -38,7 +39,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -50,6 +52,7 @@
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^9.0.2",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
