--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/cli": "^11.2.0",
     "@react-native-community/cli-platform-android": "^11.3.3",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^9.4.1",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/messaging": "^18.3.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
