--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-camera": "^4.2.1",
+    "react-native-date-picker": "^4.3.3",
     "react-native-flash-message": "^0.4.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-get-random-values": "^1.9.0",
