--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-get-random-values": "^1.9.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-pager-view": "^6.2.0",
+    "react-native-paper": "^5.10.6",
     "react-native-progress": "^5.0.0",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^3.1.0",
