--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/netinfo": "^9.4.1",
     "@react-native-firebase/app": "^18.3.0",
     "@react-native-firebase/messaging": "^18.3.0",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-top-tabs": "^6.6.3",
     "@react-navigation/native": "^6.1.6",
