--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,8 +102,8 @@ android {
         applicationId "com.loyalclub"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion 34
-        versionCode 17
-        versionName "17.0"
+        versionCode 20
+        versionName "20.0"
     }
 
     splits {
@@ -180,6 +180,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation 'org.jetbrains:annotations:16.0.2'
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
